[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tulbase"
version = "0.2.0"
description = "Depth-aware context compression for LLM proxies. Turn-box marker format with epistemic transparency."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Compresh Ltd", email = "hello@compre.sh"}]
keywords = [
    "llm", "proxy", "context-compression", "turn-box",
    "depth-aware", "prompt-engineering", "openai", "anthropic",
    "episodic-memory", "injection-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "duckdb>=0.9.0",
]

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5.0"]
injection = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
summarizer = [
    "sumy>=0.11.0",
    "nltk>=3.8.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
]

[project.scripts]
tulbase = "tulbase.cli:main"

[project.urls]
Homepage = "https://compre.sh"
Documentation = "https://compre.sh/docs"
Repository = "https://github.com/compresh/tulbase"
Issues = "https://github.com/compresh/tulbase/issues"
Changelog = "https://github.com/compresh/tulbase/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["tulbase*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tulbase/injection.py" = ["E501"]
"examples/*.py" = ["E501"]
"tests/*.py" = ["E501"]
"bench/*.py" = ["E501"]   # bench markdown table headers can be long

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
